Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49596

When text is selected in a QML TextEdit that is wrapping over lines then some parts of the text is not being rendered

    XMLWordPrintable

Details

    • 342c909b340cb1bfbb95480fc79dcea21a470c83

    Description

      When text is selected in a QML TextEdit that is wrapping over lines then some parts of the text is not being rendered. Just the selection background is being rendered but not the text itself.

      Attachments

        1. qtbug49596.zip
          2 kB
        2. test.qml
          0.6 kB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              esabraha Eskil Abrahamsen Blomfeldt
              andysh Andy Shaw
              Votes:
              4 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes